--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,5 @@ builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cp -r data /app/ && uvicorn src.api.server:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn src.api.server:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE" 
